<package><name>autodocking</name>
<version>0.0.0</version>
<description>The auto docking package</description>
<maintainer email="odroid@todo.todo">odroid</maintainer>
<license>TODO</license>
<build_depend>message_generation</build_depend>
<!-- Use buildtool_depend for build tool packages: -->
<!--   <buildtool_depend>catkin</buildtool_depend> -->
<!-- Use run_depend for packages you need at runtime: -->
<run_depend>message_runtime</run_depend>
<buildtool_depend>catkin</buildtool_depend>
<build_depend>roscpp</build_depend>
<build_depend>rospy</build_depend>
<build_depend>std_msgs</build_depend>
<run_depend>roscpp</run_depend>
<run_depend>rospy</run_depend>
<run_depend>std_msgs</run_depend>

<export><!-- Other tools can request additional information be placed here 
--></export>
</package>